--- a/bot-impl/pom.xml
+++ b/bot-impl/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <version>${hibernate.jpa.api.version}</version>
+            <version>${version.lib.hibernate.jpa-api}</version>
         </dependency>
     </dependencies>
     <build>
