--- a/bot-impl/pom.xml
+++ b/bot-impl/pom.xml
@@ -29,20 +29,21 @@
     <version>0.4.0-SNAPSHOT</version>
 
     <properties>
-        <client.impl.version>0.6.0-SNAPSHOT</client.impl.version>
+        <version.lib.client-impl>0.6.0-SNAPSHOT</version.lib.client-impl>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>client-impl</artifactId>
-            <version>${client.impl.version}</version>
+            <version>${version.lib.client-impl}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <version>${version.lib.hibernate.jpa-api}</version>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>${version.lib.jakarta.persistence-api}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
