--- a/client-impl/pom.xml
+++ b/client-impl/pom.xml
@@ -29,20 +29,20 @@
     <version>0.6.0-SNAPSHOT</version>
 
     <properties>
-        <client.api.version>r0.5.0-1-SNAPSHOT</client.api.version>
-        <common.impl.version>0.6.0-SNAPSHOT</common.impl.version>
+        <version.lib.client-api>r0.5.0-1-SNAPSHOT</version.lib.client-api>
+        <version.lib.common-impl>0.6.0-SNAPSHOT</version.lib.common-impl>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>client-api</artifactId>
-            <version>${client.api.version}</version>
+            <version>${version.lib.client-api}</version>
         </dependency>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-impl</artifactId>
-            <version>${common.impl.version}</version>
+            <version>${version.lib.common-impl}</version>
         </dependency>
     </dependencies>
     <build>
