--- a/common-impl/pom.xml
+++ b/common-impl/pom.xml
@@ -28,14 +28,14 @@
     <version>0.6.0-SNAPSHOT</version>
 
     <properties>
-        <common.api.version>0.8.0-SNAPSHOT</common.api.version>
+        <version.lib.common-api>0.8.0-SNAPSHOT</version.lib.common-api>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-api</artifactId>
-            <version>${common.api.version}</version>
+            <version>${version.lib.common-api}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
