--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -28,16 +28,16 @@
     <version>0.2.0-SNAPSHOT</version>
 
     <properties>
-        <common.api.version>0.8.0-SNAPSHOT</common.api.version>
-        <jakarta.json.version>1.1.5</jakarta.json.version>
-        <yasson.version>1.0.3</yasson.version>
+        <version.lib.common-api>0.8.0-SNAPSHOT</version.lib.common-api>
+        <version.lib.jakarta.json-api>1.1.5</version.lib.jakarta.json-api>
+        <version.lib.yasson>1.0.3</version.lib.yasson>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-api</artifactId>
-            <version>${common.api.version}</version>
+            <version>${version.lib.common-api}</version>
         </dependency>
         <dependency>
             <groupId>jakarta.json.bind</groupId>
@@ -51,12 +51,12 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.json</artifactId>
-            <version>${jakarta.json.version}</version>
+            <version>${version.lib.jakarta.json-api}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
-            <version>${yasson.version}</version>
+            <version>${version.lib.yasson}</version>
             <scope>test</scope>
         </dependency>
 
