--- a/client-jaxrs/pom.xml
+++ b/client-jaxrs/pom.xml
@@ -23,14 +23,14 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.7.0-SNAPSHOT</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
     <artifactId>client-jaxrs</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <properties>
-        <version.lib.client-impl>0.6.0-SNAPSHOT</version.lib.client-impl>
-        <version.lib.jackson-support>0.2.0-SNAPSHOT</version.lib.jackson-support>
+        <version.lib.client-impl>0.9.0-SNAPSHOT</version.lib.client-impl>
+        <version.lib.jackson-support>0.9.0-SNAPSHOT</version.lib.jackson-support>
         <version.lib.jackson-annotations>2.9.9</version.lib.jackson-annotations>
         <version.lib.jackson-core>2.9.9</version.lib.jackson-core>
         <version.lib.wiremock>2.23.2</version.lib.wiremock>
@@ -83,6 +83,16 @@
             <artifactId>wiremock</artifactId>
             <version>${version.lib.wiremock}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.xml.bind</groupId>
+                    <artifactId>jaxb-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
