--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -28,9 +28,10 @@
     <version>0.9.0-SNAPSHOT</version>
 
     <properties>
-        <version.lib.common-api>0.9.0-SNAPSHOT</version.lib.common-api>
+        <version.lib.common-api>0.9.0</version.lib.common-api>
         <version.lib.jakarta.json-api>1.1.5</version.lib.jakarta.json-api>
         <version.lib.yasson>1.0.3</version.lib.yasson>
+        <version.lib.mapstruct>1.3.0.Final</version.lib.mapstruct>
     </properties>
 
     <dependencies>
@@ -43,10 +44,6 @@
             <groupId>javax.json.bind</groupId>
             <artifactId>javax.json.bind-api</artifactId>
         </dependency>
-        <dependency>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.glassfish</groupId>
@@ -57,7 +54,17 @@
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
             <version>${version.lib.yasson}</version>
-            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${version.lib.mapstruct}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
         </dependency>
 
         <dependency>
@@ -85,6 +92,19 @@
                     <instructions>
                         <Automatic-Module-Name>matrix.support.jsonb</Automatic-Module-Name>
                     </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${version.lib.mapstruct}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
