--- a/client-jaxrs/pom.xml
+++ b/client-jaxrs/pom.xml
@@ -23,14 +23,14 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>0.9.0</version>
     </parent>
     <artifactId>client-jaxrs</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>0.9.0</version>
 
     <properties>
-        <version.lib.client-impl>0.9.0-SNAPSHOT</version.lib.client-impl>
-        <version.lib.jackson-support>0.9.0-SNAPSHOT</version.lib.jackson-support>
+        <version.lib.client-impl>0.9.0</version.lib.client-impl>
+        <version.lib.jackson-support>0.9.0</version.lib.jackson-support>
         <version.lib.jackson-annotations>2.9.9</version.lib.jackson-annotations>
         <version.lib.jackson-core>2.9.9</version.lib.jackson-core>
         <version.lib.wiremock>2.23.2</version.lib.wiremock>
