--- a/bot-impl/pom.xml
+++ b/bot-impl/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.9.1</version>
+        <version>0.9.2-SNAPSHOT</version>
     </parent>
     <artifactId>bot-impl</artifactId>
-    <version>0.9.1</version>
+    <version>0.9.2-SNAPSHOT</version>
 
     <properties>
-        <version.lib.client-impl>0.9.1</version.lib.client-impl>
+        <version.lib.client-impl>0.9.2-SNAPSHOT</version.lib.client-impl>
     </properties>
 
     <dependencies>
