--- a/common-impl/pom.xml
+++ b/common-impl/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.9.1</version>
+        <version>0.9.2-SNAPSHOT</version>
     </parent>
     <artifactId>common-impl</artifactId>
-    <version>0.9.1</version>
+    <version>0.9.2-SNAPSHOT</version>
 
     <properties>
-        <version.lib.common-api>0.9.1</version.lib.common-api>
+        <version.lib.common-api>0.9.2-SNAPSHOT</version.lib.common-api>
     </properties>
 
     <dependencies>
@@ -42,10 +42,10 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>jakarta.activation</groupId>
             <artifactId>jakarta.activation-api</artifactId>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>javax.json</groupId>
             <artifactId>javax.json-api</artifactId>
