--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -22,16 +22,17 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.9.1</version>
+        <version>0.9.2-SNAPSHOT</version>
     </parent>
     <artifactId>jsonb-support</artifactId>
-    <version>0.9.1</version>
+    <version>0.9.2-SNAPSHOT</version>
 
     <properties>
-        <version.lib.common-api>0.9.1</version.lib.common-api>
+        <version.lib.common-api>0.9.2-SNAPSHOT</version.lib.common-api>
         <version.lib.jakarta.json-api>1.1.5</version.lib.jakarta.json-api>
-        <version.lib.yasson>1.0.3</version.lib.yasson>
+        <version.lib.yasson>1.0.4</version.lib.yasson>
         <version.lib.mapstruct>1.3.0.Final</version.lib.mapstruct>
+        <version.lib.commons-beanutils>1.9.4</version.lib.commons-beanutils>
     </properties>
 
     <dependencies>
@@ -64,7 +65,7 @@
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
-            <version>1.9.3</version>
+            <version>${version.lib.commons-beanutils}</version>
         </dependency>
 
         <dependency>
