--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.9.1</version>
+    <version>0.9.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -84,22 +84,19 @@
         <version.plugin.maven-enforcer-plugin>3.0.0-M2</version.plugin.maven-enforcer-plugin>
 
         <!-- plugin dependencies -->
-        <version.lib.checkstyle>8.21</version.lib.checkstyle>
-        <version.lib.asm>7.1</version.lib.asm>
+        <version.lib.checkstyle>8.23</version.lib.checkstyle>
 
         <!-- dependencies -->
         <version.lib.slf4j-api>1.7.26</version.lib.slf4j-api>
         <version.lib.jackson-databind>2.9.9</version.lib.jackson-databind>
+        <version.lib.jackson-module-jaxb-annotations>2.9.9</version.lib.jackson-module-jaxb-annotations>
         <version.lib.jakarta.persistence-api>2.2.2</version.lib.jakarta.persistence-api>
-        <version.lib.junit-bom>5.4.0</version.lib.junit-bom>
-        <version.lib.jersey-client>2.28</version.lib.jersey-client>
-        <version.lib.jersey.hk2>2.28</version.lib.jersey.hk2>
-        <version.lib.jersey-media-json-jackson>2.28</version.lib.jersey-media-json-jackson>
+        <version.lib.junit-bom>5.5.1</version.lib.junit-bom>
+        <version.lib.jersey-client>2.29</version.lib.jersey-client>
+        <version.lib.jersey.hk2>2.29</version.lib.jersey.hk2>
+        <version.lib.jersey-media-json-jackson>2.29</version.lib.jersey-media-json-jackson>
         <version.lib.jackson-jaxrs-json-provider>2.9.9</version.lib.jackson-jaxrs-json-provider>
         <version.lib.microprofile>3.0</version.lib.microprofile>
-
-        <!-- compatibility -->
-        <version.lib.jakarta.activation-api>1.2.1</version.lib.jakarta.activation-api>
     </properties>
 
     <build>
@@ -109,13 +106,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${version.plugin.maven-compiler-plugin}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.ow2.asm</groupId>
-                            <artifactId>asm</artifactId>
-                            <version>${version.lib.asm}</version>
-                        </dependency>
-                    </dependencies>
                 </plugin>
                 <plugin>
                     <!-- This plugin generates the buildNumber property used in maven-bundle-plugin -->
@@ -255,13 +245,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${version.plugin.maven-surefire-plugin}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.ow2.asm</groupId>
-                            <artifactId>asm</artifactId>
-                            <version>${version.lib.asm}</version>
-                        </dependency>
-                    </dependencies>
                     <configuration>
                         <argLine>--illegal-access=permit</argLine>
                     </configuration>
@@ -321,6 +304,10 @@
             </plugins>
         </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
@@ -384,6 +371,17 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${version.lib.jackson-databind}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-annotations</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-jaxb-annotations</artifactId>
+                <version>${version.lib.jackson-module-jaxb-annotations}</version>
             </dependency>
 
             <dependency>
@@ -403,11 +401,6 @@
                 <version>${version.lib.junit-bom}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>jakarta.activation</groupId>
-                <artifactId>jakarta.activation-api</artifactId>
-                <version>${version.lib.jakarta.activation-api}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -542,6 +535,6 @@
         <module>jackson-support</module>
         <module>jsonb-support</module>
         <module>client-jaxrs</module>
-        <module>rest-client</module>
+<!--        <module>rest-client</module>-->
     </modules>
 </project>
