--- a/common-impl/pom.xml
+++ b/common-impl/pom.xml
@@ -38,6 +38,10 @@
             <version>${version.lib.common-api}</version>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.microprofile.rest.client</groupId>
+            <artifactId>microprofile-rest-client-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
