--- a/client-impl/pom.xml
+++ b/client-impl/pom.xml
@@ -23,9 +23,21 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.10.1</version>
+        <version>0.11.0-SNAPSHOT</version>
     </parent>
     <artifactId>client-impl</artifactId>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.github.ma1uta.matrix</groupId>
+                <artifactId>jmsdk-bom</artifactId>
+                <version>0.11.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -35,7 +47,6 @@
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>client-api</artifactId>
-            <version>${version.lib.jeon}</version>
         </dependency>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
@@ -46,13 +57,11 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client-microprofile</artifactId>
-            <version>${version.lib.resteasy}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jackson2-provider</artifactId>
-            <version>${version.lib.resteasy}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -79,13 +88,11 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${version.lib.logback-classic}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
-            <version>${version.lib.wiremock}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
