--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -23,15 +23,26 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.10.1</version>
+        <version>0.11.0-SNAPSHOT</version>
     </parent>
     <artifactId>jsonb-support</artifactId>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.github.ma1uta.matrix</groupId>
+                <artifactId>jmsdk-bom</artifactId>
+                <version>0.11.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-api</artifactId>
-            <version>${version.lib.jeon}</version>
         </dependency>
         <dependency>
             <groupId>io.github.ma1uta.matrix</groupId>
@@ -46,23 +57,19 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.json</artifactId>
-            <version>${version.lib.jakarta.json-api}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
-            <version>${version.lib.yasson}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>${version.lib.mapstruct}</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
-            <version>${version.lib.commons-beanutils}</version>
         </dependency>
 
         <dependency>
