--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.10.1</version>
+    <version>0.11.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -37,7 +37,7 @@
 
     <scm>
         <url>https://github.com/ma1uta/jmsdk</url>
-        <developerConnection>scm:git:ssh://github.com:ma1uta/jmsdk</developerConnection>
+        <developerConnection>scm:git:ssh://github.com/ma1uta/jmsdk</developerConnection>
         <connection>scm:git:git://github.com/ma1uta/jmsdk</connection>
     </scm>
 
@@ -45,7 +45,7 @@
         <developer>
             <id>ma1uta</id>
             <name>Anatoly</name>
-            <email>Anatoliy Sablin tolya@sablin.xyz</email>
+            <email>tolya@sablin.xyz</email>
         </developer>
     </developers>
 
@@ -82,32 +82,13 @@
         <version.plugin.maven-bundle-plugin>4.1.0</version.plugin.maven-bundle-plugin>
         <version.plugin.buildnumber-maven-plugin>1.4</version.plugin.buildnumber-maven-plugin>
         <version.plugin.maven-enforcer-plugin>3.0.0-M2</version.plugin.maven-enforcer-plugin>
+        <version.plugin.maven-release-plugin>3.0.0-M1</version.plugin.maven-release-plugin>
 
         <!-- plugin dependencies -->
         <version.lib.checkstyle>8.29</version.lib.checkstyle>
-
-        <!-- dependencies -->
-        <version.lib.jeon>0.10.1</version.lib.jeon>
-        <version.lib.commons-beanutils>1.9.4</version.lib.commons-beanutils>
-        <version.lib.logback-classic>1.2.3</version.lib.logback-classic>
-        <version.lib.slf4j-api>1.7.30</version.lib.slf4j-api>
-        <version.lib.jackson-databind>2.10.2</version.lib.jackson-databind>
-        <version.lib.jackson-module-jaxb-annotations>2.10.2</version.lib.jackson-module-jaxb-annotations>
-        <version.lib.jackson-jaxrs-json-provider>2.10.2.1</version.lib.jackson-jaxrs-json-provider>
-        <version.lib.jakarta.json-api>1.1.6</version.lib.jakarta.json-api>
-        <version.lib.jakarta.persistence-api>2.2.3</version.lib.jakarta.persistence-api>
-        <version.lib.junit-bom>5.6.0</version.lib.junit-bom>
-        <version.lib.jersey-client>2.30</version.lib.jersey-client>
-        <version.lib.jersey.hk2>2.30</version.lib.jersey.hk2>
-        <version.lib.jersey-media-json-jackson>2.30</version.lib.jersey-media-json-jackson>
-        <version.lib.microprofile>3.2</version.lib.microprofile>
-        <version.lib.mapstruct>1.3.1.Final</version.lib.mapstruct>
-        <version.lib.yasson>1.0.6</version.lib.yasson>
-        <version.lib.jaxb-api>2.3.1</version.lib.jaxb-api>
-        <version.lib.resteasy>4.4.2.Final</version.lib.resteasy>
-        <version.lib.wiremock>2.26.0</version.lib.wiremock>
-
         <version.lib.asm>7.3.1</version.lib.asm>
+
+        <version.lib.mapstruct>1.3.1.Final</version.lib.mapstruct>
     </properties>
 
     <build>
@@ -312,6 +293,14 @@
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>${version.plugin.maven-project-info-plugin}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${version.plugin.maven-release-plugin}</version>
+                    <configuration>
+                        <tagNameFormat>@{project.version}</tagNameFormat>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -355,66 +344,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.eclipse.microprofile</groupId>
-                <artifactId>microprofile</artifactId>
-                <version>${version.lib.microprofile}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>${version.lib.slf4j-api}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.jaxrs</groupId>
-                <artifactId>jackson-jaxrs-json-provider</artifactId>
-                <version>${version.lib.jackson-jaxrs-json-provider}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${version.lib.jackson-databind}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.fasterxml.jackson.core</groupId>
-                        <artifactId>jackson-annotations</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.module</groupId>
-                <artifactId>jackson-module-jaxb-annotations</artifactId>
-                <version>${version.lib.jackson-module-jaxb-annotations}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.glassfish.jersey.core</groupId>
-                <artifactId>jersey-client</artifactId>
-                <version>${version.lib.jersey-client}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.jersey.media</groupId>
-                <artifactId>jersey-media-json-jackson</artifactId>
-                <version>${version.lib.jersey-media-json-jackson}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.junit</groupId>
-                <artifactId>junit-bom</artifactId>
-                <version>${version.lib.junit-bom}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <profiles>
         <profile>
@@ -547,6 +482,7 @@
     </profiles>
 
     <modules>
+        <module>jmsdk-bom</module>
         <module>common-impl</module>
         <module>client-impl</module>
         <module>bot-impl</module>
